--- a/src/styles/zone.css
+++ b/src/styles/zone.css
@@ -40,6 +40,7 @@ button {
      padding: 10px;
      font-size: 18px;
      border: none;
+     text-align: left;
 }
 
 .create-new button {
